# device-inspector

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DISTRIBUTION_README.md  FEATURES.md  LICENSE.txt  NEXT_STEPS.md  PROGRESS_SUMMARY.md  PROJECT_GOAL.md  PROJECT_READINESS.md  PROJECT_STATUS.md  README.md  REPORT_SCHEMA.md  ROADMAP.md  SECURITY.md  SETUP.md  SETUP_CHECKLIST.md  SPRINT_1_SUMMARY.md  cli.py  inspecta.spec  launch_inspecta.ps1  launch_inspecta.sh  pyproject.toml  requirements-build.txt  requirements-optional.txt  requirements.txt  setup.ps1  setup.py  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agent/: __init__.py  analytics_profile.py  anomaly.py  capability_matrix.py  cli.py  device_class_profiles.py  evidence.py  exceptions.py  logging_utils.py  native_bridge.py  native_contract.py  native_probe_runner.py  plugin_manifest.py  plugin_negotiation.py  policy_pack.py  profiles.py  redaction.py  reliability.py  report.py  report_formatter.py  schema_compat.py  scoring.py  upload_client.py
archives/: README.md
docs/: AI_AGENT_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_2026_Q2.md  BOOTABLE.md  BRAND_KIT.md  BUILDING.md  DEV_SETUP.md  DISTRIBUTION.md  FIRE_OS_FEASIBILITY_MVP.md  HARDWARE_CLASS_CERTIFICATION_MATRIX.md  HARMONYOS.md  MOBILE_SECURE_KEY_PLAN.md  PACKAGE_CHANNELS.md  PACKAGING_CHECKLIST.md  PLATFORM_CAPABILITY_MATRIX.md  RELEASE.md  RELEASE_EVIDENCE_CHECKLIST.md  RELEASE_SIGNOFF_POLICY.md
docs-site/: app.js  index.html  styles.css
web/: README.md  (+3 more)
(+193 files in other folders)
