[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inspecta-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["click>=8.0.0", "jsonschema>=4.0.0"]

[project.scripts]
inspecta = "agent.cli:cli"

[tool.setuptools]
packages = ["agent", "agent.plugins"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I"]
ignore = ["C901", "E501"]  # Ignore complexity checks and line length for now

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "--cov=agent --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=35"

[tool.coverage.run]
source = ["agent"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "samples"]
skips = ["B101"]
